Bug 1837487 - stop asserting when Q units are used r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D180384